--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       fugiat perferendis, minima ab molestiae, neque consequatur earum tenetur
       unde repudiandae inventore sapiente ipsam excepturi deleniti nostrum
       illum? Impedit, fugiat non in laborum illum dolores reiciendis sequi!
-      Suscipit doloribus optio animi in fuga officiis at labore! Reiciendis eos
+      Suscipit doloribus optio animi in fuga officiis at lsabore! Reiciendis eos
       voluptate saepe nobis officiis dolorem corporis, ex, iure nihil deleniti,
       enim corrupti nisi ab! Dolore fuga repudiandae commodi nemo quos vel
       dolorum illo ipsam assumenda, eum numquam temporibus ea doloribus deleniti
