--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <a href="gallery.html">Galéria</a>
       <a href="contact.html">Kapcsolat</a>
     </nav>
+    <input type="checkbox" id="menu" /><label for="menu" id="menulabel"
+    >☰</label>
     <h1>RD</h1>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta quam,
