--- a/gallery.html
+++ b/gallery.html
@@ -13,5 +13,8 @@
       <a href="contact.html">Kapcsolat</a>
     </nav>
     <h1>Galéria</h1>
+    <img src="img/delfin.png" alt="" width="200" />
+    <img src="img/kutya.webp" alt="" width="200" />
+    <img src="img/macska.jpg" alt="" width="200" />
   </body>
 </html>
