--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
     <title>RD</title>
   </head>
   <body>
@@ -13,8 +14,15 @@
       <a href="contact.html">Kapcsolat</a>
     </nav>
     <h1>Galéria</h1>
-    <img src="img/delfin.png" alt="" width="200" />
-    <img src="img/kutya.webp" alt="" width="200" />
-    <img src="img/macska.jpg" alt="" width="200" />
+
+    <a href="deflin.html">
+      <img src="img/delfin.png" alt="" width="200" />
+    </a>
+    <a href="kutya.html">
+      <img src="img/kutya.webp" alt="" width="200" />
+    </a>
+    <a href="macska.html">
+      <img src="img/macska.jpg" alt="" width="200" />
+    </a>
   </body>
 </html>
