--- a/macska.html
+++ b/macska.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Macska kép</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
-    <title>RD</title>
   </head>
   <body>
     <nav>
@@ -13,6 +13,6 @@
       <a href="gallery.html">Galéria</a>
       <a href="contact.html">Kapcsolat</a>
     </nav>
-    <h1>Kapcsolat</h1>
+    <img src="img/macska.jpg" alt="" />
   </body>
 </html>
