képek propertyje pontosítva, navigációs gombok létrehozva

--- a/deflin.html
+++ b/deflin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,6 +13,11 @@
       <a href="gallery.html">Galéria</a>
       <a href="contact.html">Kapcsolat</a>
     </nav>
-    <img src="img/delfin.png" alt="" />
+
+    <div id="container">
+      <a href="gallery.html">&lt; Előző</a>
+      <img src="img/delfin.png" alt="" class="kepMeret" />
+      <a href="kutya.html">Következő &gt;</a>
+    </div>
   </body>
 </html>
