--- a/gallery2.html
+++ b/gallery2.html
@@ -14,6 +14,6 @@
       <a href="contact.html">Kapcsolat</a>
       <a href="gallery2.html">Galléria2</a>
     </nav>
-    <h1>Kapcsolat</h1>
+    <h1>Galéria2</h1>
   </body>
 </html>
