--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <a href="index.html">Főoldal</a>
       <a href="gallery.html">Galéria</a>
       <a href="contact.html">Kapcsolat</a>
+      <a href="gallery2.html">Galléria2</a>
     </nav>
     <input type="checkbox" id="menu" /><label for="menu" id="menulabel"
       >☰</label
