--- a/gallery2.html
+++ b/gallery2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="gallery.js" defer></script>
     <title>RD</title>
   </head>
   <body>
@@ -12,8 +12,9 @@
       <a href="index.html">Főoldal</a>
       <a href="gallery.html">Galéria</a>
       <a href="contact.html">Kapcsolat</a>
-      <a href="gallery2.html">Galléria2</a>
+      <a href="gallery2.html">Galéria2</a>
     </nav>
     <h1>Galéria2</h1>
+    <div id="container"></div>
   </body>
 </html>
