--- a/kutya.html
+++ b/kutya.html
@@ -12,7 +12,7 @@
       <a href="index.html">Főoldal</a>
       <a href="gallery.html">Galéria</a>
       <a href="contact.html">Kapcsolat</a>
-      <a href="gallery2.html">Galléria2</a>
+      <a href="gallery2.html">Galéria2</a>
     </nav>
 
     <div id="container">
