js-el kepek hozzáadva a gallery2-höz

--- a/deflin.html
+++ b/deflin.html
@@ -15,7 +15,7 @@
       <a href="gallery2.html">Galéria2</a>
     </nav>
 
-    <div id="container">
+    <div id="kepgallery">
       <a href="gallery.html">&lt; Előző</a>
       <img src="img/delfin.png" alt="" class="kepMeret" />
       <a href="kutya.html">Következő &gt;</a>
