--- a/kutya.html
+++ b/kutya.html
@@ -15,7 +15,7 @@
       <a href="gallery2.html">Galéria2</a>
     </nav>
 
-    <div id="container">
+    <div id="kepgallery">
       <a href="deflin.html">&lt; Előző</a>
       <img src="img/kutya.webp" alt="" class="kepMeret" />
       <a href="macska.html">Következő &gt;</a>
