big images in gallery2

--- a/gallery2.html
+++ b/gallery2.html
@@ -16,5 +16,8 @@
     </nav>
     <h1>Galéria2</h1>
     <div id="container"></div>
+    <div id="bigImageDiv">
+      <img src="" alt="" id="targetImage" />
+    </div>
   </body>
 </html>
